# dekodec

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
dekodec/: __init__.py  dekodec.py
tests/: test_dekodec.py
