[metadata]
name = dekodec
version = 0.1.0
description = Splits neural population activity into condition-specific unique subspaces and shared subspaces.
author = Brian Dekleva, Raeed Chowdhury
license = MIT
classifiers =
    programming language :: python :: 3
    license :: osi approved :: mit license
    operating system :: os independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
    scikit-learn
    torch
    pymanopt
    pandas
include_package_data = True

[options.extras_require]
test = pytest

[options.packages.find]
where = dekodec
